# libtinything

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SConscript  SConscript_birdwing  SConstruct  build_metadata.py  conanfile.py  jsontoolpath.md  libtinything_examples.py  mb_version  metafile.md  starter_spec.md  tinything.hh
debian/: README  changelog  control  copyright  libtinything-dev.install
include/: TinyThingReader.hh  tinything_c_interface.hh
include/tinything/: TinyThingConstants.hh  TinyThingReader.hh  TinyThingWriter.hh  tinything_c_interface.hh
python/: CMakeLists.txt
python/tinything/: tinything.py
rpm/: libtinything.spec
src/: CMakeLists.txt  TinyThingConstants.cc  TinyThingReader.cc  TinyThingReader.hh  TinyThingReader_Impl.hh  TinyThingWriter.cc  TinyThingWriter.hh  semver.hh  tinything.cc  tinything.hh  tinything_c_interface.cc  tinything_c_interface.hh
src/cli/: CMakeLists.txt  writer.cc
src/miniunzip/: unzip.c  unzip.h
test/: CMakeLists.txt  corrupt_metadata.makerbot  empty_metadata.makerbot  future_version.makerbot  lists_missing.makerbot  lists_wrong_types.makerbot  miracle_config_wrong_type.makerbot  reader_tests.cpp  test.makerbot  test.py  test_module.cpp  tmp.makerbot  tool_null.makerbot  tool_null_v11.makerbot  valid.makerbot  valid_v0.makerbot  valid_v11.makerbot
